turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:8: error: not found: value -
  var DEMI-TOUR = 4
          ^Turmite:8: error: not found: value DEMI
  var DEMI-TOUR = 4
      ^Turmite:8: error: not found: value TOUR
  var DEMI-TOUR = 4
           ^