turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  var RIGHT = 2
  var LEFT = 8
  var DEMI-TOUR = 4
  var STOP=0
  var AVANCE = 1
  var couleurActuelle=0
  var MVT_SUIVANT=0
  
}
